@@ -97,7 +97,7 @@
   </pluginRepositories>
 
   <!-- =============================================================== -->
-  <!-- Gestion des dépendances -->
+  <!-- Dependencies management -->
   <!-- =============================================================== -->
   <dependencyManagement>
     <dependencies>
@@ -187,9 +187,53 @@
     </dependencies>
   </dependencyManagement>
 
+  <!-- =============================================================== -->
+  <!-- Build -->
+  <!-- =============================================================== -->
   <build>
+
+    <!-- =============================================================== -->
+    <!-- Build Plugins Management -->
+    <!-- =============================================================== -->
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+
+      <!-- =============================================================== -->
+      <!-- Build Plugins -->
+      <!-- =============================================================== -->
       <plugins>
+        <!-- This plugin helps finding the latest plugin or dependency versions for your modules.
+        Open up the terminal and execute this command to find the plugin versions you have to update:
+        mvn versions:display-plugin-updates
+        mvn versions:display-dependency-updates -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+            <generateBackupPoms>false</generateBackupPoms>
+          </configuration>
+        </plugin>
+        <!-- See https://maven.apache.org/enforcer/enforcer-rules/requireMavenVersion.html -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>3.0.0-M2</version>
+          <executions>
+            <execution>
+              <id>enforce-maven</id>
+              <goals>
+                <goal>enforce</goal>
+              </goals>
+              <configuration>
+                <rules>
+                  <requireMavenVersion>
+                    <version>3.3</version>
+                  </requireMavenVersion>
+                </rules>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -198,7 +242,7 @@
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -210,20 +254,59 @@
           </configuration>
         </plugin>
         <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>3.0.1</version>
         </plugin>
+        <!-- For surefire and failsafe plugins we add an additional argument to allow all reflection access for third party libraries -->
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M3</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+          </configuration>
+        </plugin>
+        <!-- For surefire and failsafe plugins we add an additional argument to allow all reflection access for third party libraries -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.0.0-M3</version>
+          <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
+          </configuration>
+        </plugin>
+        <!-- Build an executable JAR -->
+        <!-- the following commands can invoke Maven JAR Plugin:  -->
+        <!-- mvn clean install -->
+        <!-- mvn clean package -->
+        <!-- mvn clean verify -->
+
+        <!-- Execution : java -classpath ALEXANDRIA/target/ALEXANDRIA-1.0-SNAPSHOT.jar com.alexandria.Main -->
+        <!-- Execution : java -jar ALEXANDRIA/target/ALEXANDRIA-1.0-SNAPSHOT.jar -->
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>3.1.1</version>
+          <configuration>
+            <archive>
+              <!-- Create MANIFEST.MF file -->
+              <!--          <manifest>
+                              <mainClass>${start-class}</mainClass>
+                            </manifest> -->
+              <!-- Get an already created MANIFEST.MF file -->
+              <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
+          <version>3.0.0-M1</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>3.0.0-M1</version>
         </plugin>
         <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
@@ -234,6 +317,54 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.8</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.1.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.1.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.3</version>
+        </plugin>
+
+        <!-- https://www.baeldung.com/executable-jar-with-maven -->
+        <!-- https://docs.spring.io/spring-boot/docs/current/maven-plugin/usage.html -->
+        <!-- Require Maven 3.2+ -->
+        <!-- mvn clean package spring-boot:repackage -->
+        <!-- mvn spring-boot:run -> Application runs in an exploded form -->
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>2.1.3.RELEASE</version>
+          <configuration>
+            <!-- In order to execute mvn spring-boot:run -->
+            <mainClass>${start-class}</mainClass>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>repackage</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
